include/dss_capi.h

    DSS_CAPI_DLL void Reactors_Get_Z(double** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL void Reactors_Get_Z_GR(void);
    DSS_CAPI_DLL void Reactors_Set_Z(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Reactors_Set_Z1(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Reactors_Get_Z2(double** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL void Reactors_Get_Z2_GR(void);
    DSS_CAPI_DLL void Reactors_Set_Z2(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Reactors_Get_Z0(double** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL void Reactors_Get_Z0_GR(void);
    DSS_CAPI_DLL void Reactors_Set_Z0(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL int32_t Reactors_Get_idx(void);
    DSS_CAPI_DLL void Reactors_Set_idx(int32_t Value);